Added server news and edit server user. Edit proto news and user.
